<resources>
    <string name="app_name">SplitCost</string>
    <string name="plus">+</string>
    <string name="Date">Date</string>
    <string name="Category">Category</string>
    <string name="amount">Amount</string>
    <string name="Save">Save</string>
    <string name="error">Error!</string>
    <string name="calculator">Calculator</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="newCategory">New Category</string>
    <string name="descriptionOfNewCategory">Enter the name of category</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="categoryAlreadyExist">Category already exist!</string>
    <string name="delete">Delete</string>
    <string name="deleteCategory">Delete category</string>
    <string name="descriptionOfDeleteCategory">After deleting you will not be able to write data to this category, but all current data in this category will be saved</string>
    <string name="total">"Total: "</string>
    <string name="perAll">All</string>
    <string name="perDays">Day</string>
    <string name="perMonths">Month</string>
    <string name="perYear">Year</string>
    <string name="perPeriod">Period</string>
    <string name="category">Categories</string>
    <string name="changeData">Change data</string>
    <string name="enterNewData">Enter new value:</string>
    <string name="change">Change</string>
    <string name="Chart">Chart</string>
    <string name="deleteDb">Delete/Export database</string>
    <string name="deleteDbDescription">You can delete or export your database. After exporting you cannot rename file, after renaming, you cannot import it</string>
    <string name="changeDbBeforeDelete">Error! Change database before deleting it</string>
    <string name="createDb">Create new database</string>
    <string name="descriptionCreateDb">Enter the name of database. You won\'t be able to rename the database later!</string>
    <string name="settings">Settings</string>
    <string name="databases">Databases</string>
    <string name="add_new">New</string>
    <string name="btn01">0</string>
    <string name="btn91">9</string>
    <string name="btn11">1</string>
    <string name="btn21">2</string>
    <string name="btn31">3</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="btn41">4</string>
    <string name="btn51">5</string>
    <string name="btn61">6</string>
    <string name="btn71">7</string>
    <string name="btn81">8</string>
    <string name="Clean">C</string>
    <string name="done_calc">✔</string>
    <string name="cancel_calc">X</string>
    <string name="clear_all_calc">AC</string>
    <string name="default_text_calc">0</string>
    <string name="dot">.</string>
    <string name="toLargeOrSmall">Value is too high or too low</string>
    <string name="exportDb">Export</string>
    <string name="pleaseWait">Please, wait...</string>
    <string name="incorrectFile">Invalid file or Database already exist!</string>
    <string name="dbAlreadyExist">Database already exist!</string>
    <string name="success">Success</string>
    <string name="selectDb">Select Database</string>
    <string name="selectDbDescription">Are you sure to import this database?</string>
    <string name="import_db">Import</string>
    <string name="updateTitle">Update</string>
    <string name="updateText">New version of SplitCost available, please update it now:\nIn this update:\n</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="expenses_per_day">Expenses per day:</string>
    <string name="total_incomes">Total Income</string>
    <string name="incomes_per_day">Income per day:</string>
    <string name="add_income">Income</string>
    <string name="add_expense">Expense</string>
    <string name="view_income">View Income</string>
    <string name="view_expense">View Expense</string>
    <string name="current_balance">Current Balance</string>
    <string name="change_prefix">Currency</string>
    <string name="back_description">Back</string>
    <string name="change_note_time">Record time</string>
    <string name="global">Global</string>
    <string name="currency_changed">"Currency changed to: "</string>
    <string name="creators">Contributors</string>
    <string name="designer_ky_sonnya">Designer: ky_sonnya</string>
    <string name="developer_anready">Developer: Anready</string>
    <string name="testers_yulia_michail">QA: Yuliia, Mykhailo</string>
    <string name="features_marco_tuzza">Features: marco-tuzza</string>
    <string name="source_code_and_contributors">Source code and contributors</string>
    <string name="join_our_discord_server_codersanx">Join Our Discord Server: CodersANX</string>
    <string name="manage_db">Manage Databases</string>
    <string name="theme">Theme</string>
    <string name="salary">Salary</string>
    <string name="products">Products</string>
    <string name="areYouSure">Are you sure to delete database?</string>
    <string name="syncinc">Syncing database</string>
    <string name="setPassword">Set Password</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="view_password">View password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="deletePassword">Delete</string>
    <string name="enter_password">Enter password!</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="login">Login</string>
    <string name="password_saved">Password saved!</string>
    <string name="enterPasswordBeforeEditing">Enter the password before edit it:</string>
    <string name="local">Local</string>
    <string name="getDbDescription">Import journal from local storage or get from cloud?</string>
    <string name="getDb">Import Journal</string>
    <string name="cloud">Cloud</string>
    <string name="pleaseLogin">Please login in pCloud Account</string>
    <string name="onlineDatabase">Is journal online?</string>
    <string name="onlineDbDescription">If you plan to always this journal with cloud, press yes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="whatToDo">What to do</string>
    <string name="descriptionWhatToDo">Apply data from cloud or from local? %s %s: %s</string>
    <string name="fromLocal">From local</string>
    <string name="fromCloud">From Cloud</string>
    <string name="addOrRemove">From cloud: Add\nFrom local: Delete</string>
</resources>