<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.calculator.Calculator">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn01"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.46" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn91"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintWidth_percent="0.21"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn11"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.21"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn21"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn31"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/dot"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/plus"
            android:textColor="@color/calcButtonText"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/equals"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/minus"
            android:textColor="@color/calcButtonText"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/multiply"
            android:textColor="@color/calcButtonText"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/divide"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/divide"
            android:textColor="@color/calcButtonText"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/eight"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/Clean"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/dot"
            android:textColor="@color/calcButtonText"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/zero"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/calculator_button"
            android:backgroundTint="#3B82F6"
            android:text="@string/equals"
            android:textColor="@color/calcButtonText"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.38"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn41"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn51"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/two"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn61"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn71"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.21" />


        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/btn81"
            android:textColor="@color/calcButtonText"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/five"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintWidth_percent="0.21"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/AC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:backgroundTint="#EF4444"
            android:text="@string/clear_all_calc"
            android:textColor="@color/backTint"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toEndOf="@+id/multiply"
            app:layout_constraintWidth_percent="0.21" />

        <Button
            android:id="@+id/Clean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/calculator_button"
            android:text="@string/Clean"
            android:textColor="@color/calcButtonText"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintHeight_percent="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.21" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/enter"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:gravity="bottom | right"
        android:maxLength="100"
        android:text="@string/default_text_calc"
        android:textColor="@color/calcButtonText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:background="@drawable/calculator_button"
        android:text="@string/cancel_calc"
        android:textColor="@color/calcButtonText"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/done"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:background="@drawable/calculator_button"
        android:text="@string/done_calc"
        android:textColor="@color/calcButtonText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>